# pydipsl

./: .buildinfo  .gitignore  README.md  api.html  change_name.sh  genindex.html  index.html  intro.html  lexer.html  objects.inv  py-modindex.html  pygments.html  pyproject.toml  search.html  searchindex.js  syntax.html
_sources/: index.rst.txt  lexer.rst.txt
_sources/api/: diplang.nodes.rst.txt  diplang.solvers.rst.txt  dipsl.rst.txt  modules.rst.txt
_sources/intro/: about.rst.txt  example.rst.txt  install.rst.txt
_sources/lexer/: schema_highliter.rst.txt
_sources/syntax/: conditions.rst.txt  units.rst.txt  validation.rst.txt  values.rst.txt
_static/: pygments.css
api/: diplang.datatypes.html  diplang.html  diplang.nodes.html  diplang.solvers.html  dipsl.datatypes.html  dipsl.html  dipsl.nodes.html  dipsl.pygments.html  dipsl.settings.html  dipsl.solvers.html  modules.html
docs/source/: conf.py  index.rst
example/: definitions.dip  parse.py  template.parsed.txt
intro/: about.html  example.html  install.html
lexer/: schema_highliter.html  syntax_highliter.html
pygments/: schema_highliter.html  syntax_highliter.html
src/diplang/: DIP_Main.py  DIP_Unit.py
src/dipsl/: DIP_Settings.py  (+1 more)
syntax/: conditions.html  expressions.html  nodes.html  references.html  units.html  validation.html  values.html
tests/: test_blocks.py  test_conditions.py  test_examples.py  test_expressions.py  test_finalizing.py  test_references.py  test_solver_logical.py  test_solver_numerical.py  test_solver_templates.py  test_solver_units.py  test_types.py  test_validation.py
(+26 files in other folders)
