[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diplang"
version = "0.1.0"
authors = [
  { name="Ondrej Pego Jaura", email="diplang.vrtulka23@gmail.com" },
]
description = "Dimensional Input Parameter Language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vrtulka23/dip"
"Bug Tracker" = "https://github.com/vrtulka23/dip/issues"