[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dipsl"
version = "0.1.0"
authors = [
  { name="Ondrej Pego Jaura", email="dipsl.vrtulka23@gmail.com" },
]
description = "Dimensional Input Parameter Serialization Language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dipsl/dippy"
"Bug Tracker" = "https://github.com/dipsl/dippy/issues"